bgContainer now uses native static background and fixed position for the parent element which fakes a fixed background on iOS

--- a/assets/css/storyteller/storyteller.css
+++ b/assets/css/storyteller/storyteller.css
@@ -670,10 +670,6 @@ h2 {
   bottom: auto;
   top: 0;
   }
-  .fixed + .bgContainer,
-  .fixed + span + .bgContainer {
-    background-attachment: fixed!important;
-    }
 .slideshow.full.shutter {
   }
   .slideshow.full.shutter > .slides {
